Fix for finding touch regions of Window targets

Currently if a DomWindow in the page has a touch handler, the whole
region for local frame root is added as touch region. This is
incorrect as only the window for corresponding to the document/frame
should be considered -- which is the same treatment that is given to
|document|.

Bug: 830626
Change-Id: Ieebd4116e9753f800fe2534cb0c89da812d22c56
Reviewed-on: https://chromium-review.googlesource.com/1005368
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Ehsan Karamad <ekaramad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555665}
Former-commit-id: 6e8a9c51a036ab9ea128c912f756fafa9f0b4dc4